[package]
name = "redbpf-xdp"
description = "eBPF probe-related types for redbpf"
repository = "https://github.com/redsift/redbpf"
documentation = "https://ingraind.org/api//redbpf_probes/"
authors = [
    "Alessandro Decina <alessandro.d@gmail.com>",
    "Peter Parkanyi <peter@redsift.io>",
    "Flier Lu <flier.lu@gmail.com>",
]
version = "1.3.0"
edition = '2018'
keywords = ["bpf", "ebpf", "redbpf"]
license = "MIT OR Apache-2.0"

[features]
default = []
use_std = []

[dependencies]
cty = "0.2"
libc = "0.2"

redbpf-macros = { version = "1.3", path = "../redbpf-macros" }
redbpf-probes = { version = "1.3", path = "../redbpf-probes" }

[build-dependencies]
cargo-bpf = { version = "^1.3.0", path = "../cargo-bpf", default-features = false, features = ["bindings"] }
